--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList">Gold</li>
+		<li data-ns-test="shoppingList">Bike</li>
+		<li data-ns-test="shoppingList">Sweets</li>
+	</ol>
+
+	<ul>
+		<li data-ns-test="holidayList">Puri</li>
+		<li data-ns-test="holidayList">Maharashtra</li>
+		<li data-ns-test="holidayList">Kerala</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
